Issue #14899 - Support `<inherit>` Environment in `jetty-start` modules. (#14900)
* Issue #14899 - Support `<inherit>` Environment in `jetty-start` modules.